<resources>
    <string name="app_name">ATour</string>
    <string name="login">Телефон</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="send">Отправить</string>
    <string name="enter">Войти</string>
    <string name="fio">ФИО</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="member">Участник</string>
    <string name="referee">Судья</string>
    <string name="types">Виды</string>
    <string name="type_walk">Пеший</string>
    <string name="type_ski">Лыжный</string>
    <string name="type_hike">Горный</string>
    <string name="type_water">Водный</string>
    <string name="type_speleo">Спелео</string>
    <string name="type_bike">Вело</string>
    <string name="type_auto">АвтоМото</string>
    <string name="type_other">Прочее</string>
    <string name="comment">Комментарий</string>
    <string name="link">Ссылка на облачное хранилище</string>
    <string name="request">Заявка</string>
    <string name="main_referee">Гл. судья</string>
    <string name="data_from">Дата начала</string>
    <string name="data_to">Дата окончания</string>
    <string name="request_pending">Заявка на рассмотрении</string>
    <string name="request_denied">Заявка не принята</string>
    <string name="results_waiting">Документы приняты, ожидайте результатов</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="title">Название</string>
    <string name="city">Город</string>
    <string name="status">Статус соревнований</string>
    <string name="my">Мои</string>
    <string name="list">Список</string>
    <string name="manage">Управляю</string>
    <string name="sign_out">Выйти</string>
    <string name="deny">Отказать</string>
    <string name="accept">Принять</string>
    <string name="requests">Заявки</string>
    <string name="no_requests">На данный момент новых заявок не найдено</string>
    <string name="members">Участники</string>
    <string name="referees">Судьи</string>
    <string name="documents">Документы</string>
    <string name="save">Сохранить</string>
    <string name="no_internet_connection">Интернет: нет соединения</string>
    <string-array name="statuses">
        <item>Чемпионат</item>
        <item>Кубок</item>
        <item>Первенство</item>
        <item>Всероссийские</item>
    </string-array>
</resources>