<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.champ.ChampActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/et_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tv_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/mid_text_size"
        android:hint="@string/link"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/et_comment"
        app:layout_constraintStart_toStartOf="@id/et_comment"
        app:layout_constraintEnd_toEndOf="@id/et_comment" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/BlackButton"
        android:text="@string/send"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/et_link"
        app:layout_constraintStart_toStartOf="@id/et_link"
        app:layout_constraintEnd_toEndOf="@id/et_link"/>

</androidx.constraintlayout.widget.ConstraintLayout>
