<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.champ.ChampActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_layout"
        app:tabIndicatorColor="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Отправка документов"/>
    </com.google.android.material.tabs.TabLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:ems="13"
                android:hint="@string/comment"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/et_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/mid_text_size"
                android:hint="@string/link"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                style="@style/BlackButton"
                android:text="@string/send"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>